docs: Self Host Runner 수정